Add notebook to demonstrate how to fine-tune Glow TTS model.

--- a/experiments/model_c/coqui_GlowTTS.ipynb
+++ b/experiments/model_c/coqui_GlowTTS.ipynb
@@ -9,6 +9,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup and Cuda"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -93,6 +100,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Config and Model Config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset LJSpeech (v 1.1)\n",
+    "- Size: 2.6 GB, a total length of approx. 24 hours.\n",
+    "- Duration: 1 - 10 seconds per audio\n",
+    "- Field: public domain speech dataset consisting of 13,100 short audio clips of a single speaker reading apssages from 7 non-fiction books.\n",
+    "\n",
+    "Metadata is provided in metadata.csv (transcript.csv) that contains one record per line, delimited by the pipe char (0x7c) The fields are: \n",
+    "- ID: this is the name of the corresponding .waf file.\n",
+    "- Transcription: words spoken by the reader (UTF-8)\n",
+    "- Normalized Transcription: transcription with number , ordinals, and monetary units expanded into full words (UTF-8).\n",
+    "\n",
+    "Each audio file is a single-channel 16-bit PCM WAV with a sample rate of 22050 Hz.\n",
+    "\n",
+    "For more details and statistics please refer to the official website: https://keithito.com/LJ-Speech-Dataset/\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -103,11 +136,6 @@
     "    from TTS.utils.downloaders import download_ljspeech\n",
     "    download_ljspeech(data_path)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -233,6 +261,22 @@
     "    eval_split_max_size=config.eval_split_max_size,\n",
     "    eval_split_size=config.eval_split_size,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Calculations:\n",
+    "13100 files / 32 batch size = 409(.375) iterations/steps per epoch\n",
+    "100 epochs in total means 40937 iterations/steps. \n",
+    "\n",
+    "- Conditionally store best model:\n",
+    "In every epoch, judge to save the current model as the best model or not based on evaluation performance. \n",
+    "The saved model name would be best_model_{steps}.pth\n",
+    "\n",
+    "- Checkpoint_{steps}.pth: checkpoint for every 10000 iteraitons so user can later fine-tune the model\n",
+    "by retreiving the checkpoint back via `CUDA_VISIBLE_DEVICES=0 python train.py --restore_path path/to/model/checkpoint.pth`"
    ]
   },
   {
